[gd_scene load_steps=16 format=2]

[ext_resource path="res://resoure/mouse/mouse.tres" type="Texture" id=1]
[ext_resource path="res://resoure/UI/root_len/UI_root_len.tres" type="Texture" id=2]
[ext_resource path="res://node/UI/UI.gd" type="Script" id=3]
[ext_resource path="res://resoure/UI/root/UI_root.tres" type="Texture" id=4]
[ext_resource path="res://node/UI/root_len.gd" type="Script" id=5]
[ext_resource path="res://node/UI/root.gd" type="Script" id=6]
[ext_resource path="res://resoure/UI/root/not_root.tres" type="Texture" id=7]
[ext_resource path="res://resoure/UI/root_len/and_root.tres" type="Texture" id=8]
[ext_resource path="res://resoure/UI/root/UI_root_or.tres" type="Texture" id=9]
[ext_resource path="res://resoure/UI/root/UI_root_or_text.tres" type="Texture" id=10]
[ext_resource path="res://node/UI/root_or.gd" type="Script" id=11]
[ext_resource path="res://node/UI/root_short.gd" type="Script" id=12]
[ext_resource path="res://resoure/UI/root/root_short.tres" type="Texture" id=13]
[ext_resource path="res://resoure/UI/root/root_short_text.tres" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="UI" type="Node2D"]
position = Vector2( 128, 0 )
script = ExtResource( 3 )

[node name="root_len" type="Sprite" parent="."]
position = Vector2( 960, 256 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="root_len"]
position = Vector2( 1, -14 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="root_len/Area2D"]
position = Vector2( 31, 32 )
shape = SubResource( 1 )

[node name="text" type="Sprite" parent="root_len"]
position = Vector2( 32, 86 )
texture = ExtResource( 7 )

[node name="selected" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 192 )
texture = ExtResource( 1 )
centered = false

[node name="root" type="Sprite" parent="."]
position = Vector2( 960, 384 )
texture = ExtResource( 4 )
centered = false
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="root"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="root/Area2D"]
position = Vector2( 32, 33 )
shape = SubResource( 1 )

[node name="text" type="Sprite" parent="root"]
position = Vector2( 32, 86 )
texture = ExtResource( 8 )

[node name="root_or" type="Sprite" parent="."]
position = Vector2( 960, 512 )
texture = ExtResource( 9 )
centered = false
script = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="root_or"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="root_or/Area2D"]
position = Vector2( 31, 27 )
shape = SubResource( 1 )

[node name="text" type="Sprite" parent="root_or"]
position = Vector2( 32, 86 )
texture = ExtResource( 10 )

[node name="root_short" type="Sprite" parent="."]
position = Vector2( 960, 128 )
texture = ExtResource( 13 )
centered = false
script = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="root_short"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="root_short/Area2D"]
position = Vector2( 33, 31 )
shape = SubResource( 1 )

[node name="text" type="Sprite" parent="root_short"]
position = Vector2( 32, 88 )
texture = ExtResource( 14 )

[connection signal="mouse_entered" from="root_len/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_entered" from="root_len/Area2D" to="root_len" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="root_len/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_exited" from="root_len/Area2D" to="root_len" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="root/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_entered" from="root/Area2D" to="root" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="root/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_exited" from="root/Area2D" to="root" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="root_or/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_entered" from="root_or/Area2D" to="root_or" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="root_or/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_exited" from="root_or/Area2D" to="root_or" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="root_short/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_entered" from="root_short/Area2D" to="root_short" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="root_short/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_exited" from="root_short/Area2D" to="root_short" method="_on_Area2D_mouse_exited"]
